@@ -1,6 +1,5 @@
 package caittastic.homespun.datagen.loot;
 
-import com.google.common.collect.ImmutableList;
 import com.mojang.datafixers.util.Pair;
 import net.minecraft.data.DataGenerator;
 import net.minecraft.data.loot.LootTableProvider;
@@ -10,6 +9,7 @@ import net.minecraft.world.level.storage.loot.LootTables;
 import net.minecraft.world.level.storage.loot.ValidationContext;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
 import java.util.Map;
@@ -17,22 +17,22 @@ import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 
-public class ModLootTableProvider extends LootTableProvider {
-    private final List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>>
-            loot_tables = ImmutableList.of(Pair.of(ModBlockLootTables::new, LootContextParamSets.BLOCK));
+public class ModLootTableProvider extends LootTableProvider{
+  private final List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>>
+          lootTables = List.of(Pair.of(ModBlockLootTables::new, LootContextParamSets.BLOCK));
 
-    public ModLootTableProvider(DataGenerator pGenerator) {
-        super(pGenerator);
-    }
+  public ModLootTableProvider(DataGenerator pGenerator){
+    super(pGenerator);
+  }
 
 
-    @Override
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-        return loot_tables;
-    }
+  @Override
+  protected @NotNull List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables(){
+    return lootTables;
+  }
 
-    @Override
-    protected void validate(Map<ResourceLocation, LootTable> map, ValidationContext validationtracker) {
-        map.forEach((id, table) -> LootTables.validate(validationtracker, id, table));
-    }
+  @Override
+  protected void validate(Map<ResourceLocation, LootTable> map, @NotNull ValidationContext validationtracker){
+    map.forEach((id, table) -> LootTables.validate(validationtracker, id, table));
+  }
 }
